[tool.poetry]
name = "vtrace"
version = "0.1.0"
description = ""
authors = ["Richard Bieringa <richardbieringa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.4.5"
click = "^8.0.3"

[tool.poetry.scripts]
cli = "vtrace.app:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
